--- a/myresume/index.html
+++ b/myresume/index.html
@@ -239,27 +239,31 @@
                         <ul class="row">
                             <li class="col-md-12 "><h6> RTB (Real Time Billing) - Amdocs <span>1/2020 - Present</span></h6>
                             <div>
-                                <ul><i class="far fa-hand-point-right p-1"></i>End to end billing system fast enough to handle 5g traffic and provide you instant billing flexibility.</ul>
-                                <ul><i class="far fa-hand-point-right p-1"></i>It Involves multiple different microservice that working together in cloud environment that handles million of request per/min.</ul>
-                                <ul><i class="far fa-hand-point-right p-1"></i>Deployment is done using latest devops technologies like CI/CD docker Kubernates and helm chats.</ul>
-                                <ul><i class="far fa-hand-point-right p-1"></i>Technolgies : Spring boot, Kafka, Couchbase, OCP, Microservice, Cloud, Kubernates, Docker , Junits, RestAssured, Rest Apis.</ul>
+                                <ul><i class="far fa-hand-point-right p-1"></i>End to end billing system, fast enough to handle 5g traffic and provide you instant billing flexibility.</ul>
+                                <ul><i class="far fa-hand-point-right p-1"></i>It Involves multiple microservices that work together in cloud environment to handle
+                                    billion of requests per/min.</ul>
+                                <ul><i class="far fa-hand-point-right p-1"></i>Deployment is done using latest devops technologies like CI/CD, docker, kubernetes and helm charts.</ul>
+                                <ul><i class="far fa-hand-point-right p-1"></i>Technologies: Spring boot , Kafka ,Couchbase , OCP , Microservice, Cloud , kubernetes , Docker , Junits
+                                    , RestAssured, Rest Api's.</ul>
                             </div>
                             </li>
                             <li class="col-md-12 "><h6> IFRS (International Financial Reporting Standards) - Amdocs <span>11/2019 - 3/2020</span></h6>
                                 <div>
                                     <ul><i class="far fa-hand-point-right p-1"></i>Financial Reporting System for Financial revenue</ul>
                                     <ul><i class="far fa-hand-point-right p-1"></i>Event Driven architecture that can handle 50 events per second which involves 6 microservice</ul>
-                                    <ul><i class="far fa-hand-point-right p-1"></i>Deplopyment is done through vapps VM per microservice using ci/cd pipeline</ul>
-                                    <ul><i class="far fa-hand-point-right p-1"></i>Technologies : Spring boot , vapp ,Kafka ,Oracle,liquibase,junit ,RestAssured</ul>
+                                    <ul><i class="far fa-hand-point-right p-1"></i>Deployment is done through Vapp system per microservice using CI/CD pipeline.</ul>
+                                    <ul><i class="far fa-hand-point-right p-1"></i>Technologies : Spring boot, vapp, Kafka,Oracle, liquibase, junit, RestAssured</ul>
 
                                 </div>
                             </li>
                             <li class="col-md-12 "><h6> T-Mobile US (Billing)- Amdocs <span>05/2019 - 11/2019</span></h6>
                                 <div>
-                                    <ul><i class="far fa-hand-point-right p-1"></i>T-Mobile Billing System for flaxiable and 5g cloud base environment that can work with amdocs classic billing system.</ul>
-                                    <ul><i class="far fa-hand-point-right p-1"></i>Rest and Event Driven architecture that work together to handle new request as well as migrate classic system data to cloud environment</ul>
-                                    <ul><i class="far fa-hand-point-right p-1"></i>Deplopyment is done using latest devops technologies like CI/CD docker and Kubernates.</ul>
-                                    <ul><i class="far fa-hand-point-right p-1"></i>Technologies : Spring boot , PCF,Kafka ,Oracle,Cassandra,junit ,RestAssured,Docker ,Kubernates , Cloud , MongoDB , Gemfire ,Redis ,etc.</ul>
+                                    <ul><i class="far fa-hand-point-right p-1"></i>T-Mobile Billing System is flexible and 5g cloud base environment that can work with Amdocs
+                                        classic billing system.</ul>
+                                    <ul><i class="far fa-hand-point-right p-1"></i>Rest and Event Driven architecture that work together to handle new request and migrate
+                                        classic system data to cloud environment.</ul>
+                                    <ul><i class="far fa-hand-point-right p-1"></i>For deployment CI /CD, docker and kubernetes used.</ul>
+                                    <ul><i class="far fa-hand-point-right p-1"></i>Technologies : Spring boot , PCF, Kafka, Oracle, Cassandra, junit, RestAssured, Docker, Kubernetes ,Cloud, MongoDB, Gemfire, Redis.</ul>
                     
                                 </div>
                             </li>
